test_regress/t/t_property_pexpr_unsup.out
%Error-UNSUPPORTED: t/t_property_pexpr_unsup.v:23:11: Unsupported: strong (in property expression)
   23 |     strong(a);
      |           ^
                    ... For error description see https://verilator.org/warn/UNSUPPORTED?v=latest
%Error-UNSUPPORTED: t/t_property_pexpr_unsup.v:27:9: Unsupported: weak (in property expression)
   27 |     weak(a);
      |         ^
%Error-UNSUPPORTED: t/t_property_pexpr_unsup.v:31:7: Unsupported: until (in property expression)
   31 |     a until b;
      |       ^~~~~
%Error-UNSUPPORTED: t/t_property_pexpr_unsup.v:35:7: Unsupported: s_until (in property expression)
   35 |     a s_until b;
      |       ^~~~~~~
%Error-UNSUPPORTED: t/t_property_pexpr_unsup.v:39:7: Unsupported: until_with (in property expression)
   39 |     a until_with b;
      |       ^~~~~~~~~~
%Error-UNSUPPORTED: t/t_property_pexpr_unsup.v:43:7: Unsupported: s_until_with (in property expression)
   43 |     a s_until_with b;
      |       ^~~~~~~~~~~~
%Error-UNSUPPORTED: t/t_property_pexpr_unsup.v:47:7: Unsupported: #-# (in property expression)
   47 |     a #-# b;
      |       ^~~
%Error-UNSUPPORTED: t/t_property_pexpr_unsup.v:51:7: Unsupported: #=# (in property expression)
   51 |     a #=# b;
      |       ^~~
%Error-UNSUPPORTED: t/t_property_pexpr_unsup.v:55:5: Unsupported: nexttime (in property expression)
   55 |     nexttime a;
      |     ^~~~~~~~
%Error-UNSUPPORTED: t/t_property_pexpr_unsup.v:59:5: Unsupported: nexttime[] (in property expression)
   59 |     nexttime [2] a;
      |     ^~~~~~~~
%Error-UNSUPPORTED: t/t_property_pexpr_unsup.v:63:5: Unsupported: s_nexttime (in property expression)
   63 |     s_nexttime a;
      |     ^~~~~~~~~~
%Error-UNSUPPORTED: t/t_property_pexpr_unsup.v:67:5: Unsupported: s_nexttime[] (in property expression)
   67 |     s_nexttime [2] a;
      |     ^~~~~~~~~~
%Error-UNSUPPORTED: t/t_property_pexpr_unsup.v:71:14: Unsupported: always (in property expression)
   71 |     nexttime always a;
      |              ^~~~~~
%Error-UNSUPPORTED: t/t_property_pexpr_unsup.v:71:5: Unsupported: nexttime (in property expression)
   71 |     nexttime always a;
      |     ^~~~~~~~
%Error-UNSUPPORTED: t/t_property_pexpr_unsup.v:75:18: Unsupported: always (in property expression)
   75 |     nexttime [2] always a;
      |                  ^~~~~~
%Error-UNSUPPORTED: t/t_property_pexpr_unsup.v:75:5: Unsupported: nexttime[] (in property expression)
   75 |     nexttime [2] always a;
      |     ^~~~~~~~
%Error-UNSUPPORTED: t/t_property_pexpr_unsup.v:79:18: Unsupported: always (in property expression)
   79 |     nexttime [2] always a;
      |                  ^~~~~~
%Error-UNSUPPORTED: t/t_property_pexpr_unsup.v:79:5: Unsupported: nexttime[] (in property expression)
   79 |     nexttime [2] always a;
      |     ^~~~~~~~
%Error-UNSUPPORTED: t/t_property_pexpr_unsup.v:83:14: Unsupported: s_eventually (in property expression)
   83 |     nexttime s_eventually a;
      |              ^~~~~~~~~~~~
%Error-UNSUPPORTED: t/t_property_pexpr_unsup.v:83:5: Unsupported: nexttime (in property expression)
   83 |     nexttime s_eventually a;
      |     ^~~~~~~~
%Error-UNSUPPORTED: t/t_property_pexpr_unsup.v:87:33: Unsupported: always (in property expression)
   87 |     nexttime s_eventually [2:$] always a;
      |                                 ^~~~~~
%Error-UNSUPPORTED: t/t_property_pexpr_unsup.v:87:14: Unsupported: s_eventually[] (in property expression)
   87 |     nexttime s_eventually [2:$] always a;
      |              ^~~~~~~~~~~~
%Error-UNSUPPORTED: t/t_property_pexpr_unsup.v:87:5: Unsupported: nexttime (in property expression)
   87 |     nexttime s_eventually [2:$] always a;
      |     ^~~~~~~~
%Error-UNSUPPORTED: t/t_property_pexpr_unsup.v:91:15: Unsupported: accept_on (in property expression)
   91 |     accept_on (a) b;
      |               ^
%Error-UNSUPPORTED: t/t_property_pexpr_unsup.v:95:20: Unsupported: sync_accept_on (in property expression)
   95 |     sync_accept_on (a) b;
      |                    ^
%Error-UNSUPPORTED: t/t_property_pexpr_unsup.v:99:15: Unsupported: reject_on (in property expression)
   99 |     reject_on (a) b;
      |               ^
%Error-UNSUPPORTED: t/t_property_pexpr_unsup.v:103:20: Unsupported: sync_reject_on (in property expression)
  103 |     sync_reject_on (a) b;
      |                    ^
%Error-UNSUPPORTED: t/t_property_pexpr_unsup.v:106:26: Unsupported: property argument data type
  106 |   property p_arg_propery(property inprop);
      |                          ^~~~~~~~
%Error-UNSUPPORTED: t/t_property_pexpr_unsup.v:109:26: Unsupported: sequence argument data type
  109 |   property p_arg_seqence(sequence inseq);
      |                          ^~~~~~~~
%Error-UNSUPPORTED: t/t_property_pexpr_unsup.v:114:5: Unsupported: property case expression
  114 |     case (a) endcase
      |     ^~~~
%Error-UNSUPPORTED: t/t_property_pexpr_unsup.v:117:5: Unsupported: property case expression
  117 |     case (a) default: b; endcase
      |     ^~~~
%Error-UNSUPPORTED: t/t_property_pexpr_unsup.v:120:5: Unsupported: property case expression
  120 |     if (a) b
      |     ^~
%Error-UNSUPPORTED: t/t_property_pexpr_unsup.v:123:5: Unsupported: property case expression
  123 |     if (a) b else c
      |     ^~
%Error: Exiting due to
